<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/content_result_list_total_marks"
        android:textAlignment="viewStart"
        android:textColor="#000"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/sum_total_marks"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/content_result_list_marks"
        android:textAlignment="viewStart"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sum_obtain_marks"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/content_result_list_obtain"
        android:textAlignment="viewStart"
        android:textColor="#000"
        android:textStyle="bold" />
</LinearLayout>
