<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_6"
        android:padding="10dp"
        android:text="Result"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e5e5e5"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/content_result_list_subject"
            android:gravity="start"
            android:textAlignment="viewStart" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_marks"
            android:gravity="start"
            android:textAlignment="viewStart" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_obtain"
            android:gravity="start"
            android:textAlignment="viewStart" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
